# wheeltec_robot_ros2

./: .gitignore  README.md
src/: ROS2-V2.0(humble)常用指令.txt  ROS2-V2.2(humble)常用命令txt  wheeltec_udev.sh
src/darknet_ros/darknet/: .gitignore
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros/launch/: darknet_ros.launch.py  yolov7-tiny.launch.py
src/ros2_astra_camera/: README.MD
src/ros2_astra_camera/astra_camera/: CMakeLists.txt
src/ros2_astra_camera/astra_camera/launch/: astra_mini.launch.py  astra_pro.launch.py  gemini.launch.py
src/ros2_astra_camera/astra_camera/params/: astra_mini_params.yaml  astra_pro_params.yaml  dabai_params.yaml  gemini_params.yaml
src/ros2_astra_camera/astra_camera/src/: ob_camera_node.cpp  uvc_camera_driver.cpp
src/simple_follower_ros2/: package.xml  setup.cfg  setup.py
src/simple_follower_ros2/launch/: adjust_hsv.launch.py  laser_follower.launch.py  line_follower.launch.py  visual_follower.launch.py
src/simple_follower_ros2/param/: PID_visual_param.yaml  pid_laser_param.yaml
src/simple_follower_ros2/simple_follower_ros2/: adjust_hsv.py  laserTracker.py  laserfollower.py  line_follow.py  visualFollower.py  visualTracker.py
src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml  wheeltec-udev_new.sh  wheeltec_udev.sh
src/turn_on_wheeltec_robot/config/: ekf.yaml  ekf_carto.yaml  velocity_smoother_params.yaml
src/turn_on_wheeltec_robot/include/turn_on_wheeltec_robot/: wheeltec_robot.h
src/turn_on_wheeltec_robot/launch/: base_serial.launch.py  robot_mode_description.launch.py  robotandlidar.launch.py  turn_on_wheeltec_robot.launch.py  wheeltec_camera.launch.py  wheeltec_ekf.launch.py  wheeltec_lidar.launch.py
src/turn_on_wheeltec_robot/scripts/: cmd_vel_to_ackermann_drive.py
src/turn_on_wheeltec_robot/src/: Quaternion_Solution.cpp  wheeltec_robot.cpp
src/usb_cam-ros2/usb_cam-ros2/config/: params.yaml
src/usb_cam-ros2/usb_cam-ros2/launch/: demo.launch.py  usb_cam_launch.py
src/web_video_server-ros2/web_video_server-ros2/src/: image_streamer.cpp
src/wheeltec_joy/: CMakeLists.txt  package.xml
src/wheeltec_joy/launch/: only_joy.launch.py  wheeltec_joy.launch.py
src/wheeltec_joy/src/: wheeltec_joy_control.cpp
src/wheeltec_lidar_ros2/LDlidar/ldlidar06/src/: demo.cpp
src/wheeltec_robot_kcf/: CMakeLists.txt  package.xml
src/wheeltec_robot_kcf/include/wheeltec_robot_kcf/: CMakeLists.txt  ffttools.h  fhog.h  kcftracker.h  recttools.h  run_tracker.h  tracker.h
src/wheeltec_robot_kcf/launch/: wheeltec_robot_kcf.launch.py
src/wheeltec_robot_kcf/src/: PID.cpp  kcftracker.cpp  run_tracker.cpp
src/wheeltec_robot_keyboard/: package.xml  setup.cfg  setup.py
src/wheeltec_robot_keyboard/wheeltec_robot_keyboard/: wheeltec_keyboard.py
src/wheeltec_robot_msg/: CMakeLists.txt  package.xml
src/wheeltec_robot_msg/msg/: Supersonic.msg
src/wheeltec_robot_nav2/: CMakeLists.txt  package.xml
src/wheeltec_robot_nav2/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  save_map.launch.py  wheeltec_nav2.launch.py
src/wheeltec_robot_nav2/map/: WHEELTEC.pgm  WHEELTEC.yaml
src/wheeltec_robot_nav2/param/: wheeltec_params-ori.yaml
src/wheeltec_robot_nav2/param/wheeltec_param/: ori.yaml  param_brushless_senior_diff.yaml  param_flagship_4wd_bs.yaml  param_flagship_4wd_dl.yaml  param_flagship_four_wheel_diff_bs.yaml  param_flagship_four_wheel_diff_dl.yaml  param_flagship_mec_bs.yaml  param_flagship_mec_dl.yaml  param_four_wheel_diff_bs.yaml  param_four_wheel_diff_dl.yaml  param_mini_4wd.yaml  param_mini_akm.yaml  param_mini_diff.yaml  param_mini_mec.yaml  param_mini_omni.yaml  param_mini_tank.yaml  param_senior_4wd_bs.yaml  param_senior_4wd_dl.yaml  param_senior_akm.yaml  param_senior_diff.yaml  param_senior_mec_EightDrive.yaml  param_senior_mec_bs.yaml  param_senior_mec_dl.yaml  param_senior_omni.yaml  param_top_4wd_bs.yaml  param_top_4wd_dl.yaml  param_top_akm_bs.yaml  param_top_akm_dl.yaml  param_top_mec_EightDrive.yaml  param_top_mec_bs.yaml  param_top_mec_dl.yaml  param_top_omni.yaml
src/wheeltec_robot_nav2/rviz/: wheeltec.rviz
src/wheeltec_robot_rrt2/: CMakeLists.txt  package.xml
src/wheeltec_robot_rrt2/behaviour_trees/: robot_picker_behaviour_tree.xml
src/wheeltec_robot_rrt2/config/: nav2_params.yaml
src/wheeltec_robot_rrt2/launch/navigation/: nav2_bringup_launch.py  nav2_localization_launch.py  nav2_navigation_launch.py  nav2_slam_launch.py
src/wheeltec_robot_rrt2/launch/rrt_exploration/: action_servers.launch.py  rrt_assigner.launch.py  rrt_exploration.launch.py  visual_slam_start.py  wheeltec_rrt_slam.launch.py
src/wheeltec_robot_rrt2/src/: find_robot_action_server.cpp  pick_robot_action_server.cpp  robot_picker.cpp  robot_pose_publisher.cpp
src/wheeltec_robot_rrt2/src/bt_plugins/: find_coloured_box.cpp  pick_coloured_box.cpp
src/wheeltec_robot_rrt2/src/rrt_exploration/: assigner.cpp  filter.cpp  global_rrt.cpp  local_rrt.cpp  utils.cpp  wait_for_fin.cpp
src/wheeltec_robot_rrt2/src/rrt_exploration/include/: utils.h
src/wheeltec_robot_rtab/: CMakeLists.txt  package.xml
src/wheeltec_robot_rtab/launch/: rtabmap_map.rviz  rtabmap_nav.rviz  wheeltec_nav2_rtab.launch.py  wheeltec_rtab_sync.launch.py  wheeltec_slam_rtab.launch.py
src/wheeltec_robot_slam/openslam_gmapping/: CMakeLists.txt
src/wheeltec_robot_slam/slam_gmapping/: package.xml
src/wheeltec_robot_slam/slam_gmapping/launch/: slam_gmapping.launch.py
src/wheeltec_robot_slam/slam_gmapping/src/: slam_gmapping.cpp
src/wheeltec_robot_slam/wheeltec_cartographer/: CMakeLists.txt  package.xml
src/wheeltec_robot_slam/wheeltec_slam_toolbox/: CMakeLists.txt  package.xml
src/wheeltec_robot_urdf/wheeltec_robot_urdf/: CMakeLists.txt  package.xml
src/wheeltec_robot_urdf/wheeltec_robot_urdf/urdf/: mini_akm_robot.urdf  mini_diff_robot.urdf  senior_akm_robot.urdf  top_akm_bs_robot.urdf  top_akm_dl_robot.urdf
src/wheeltec_rrt_msg/: CMakeLists.txt  package.xml
src/wheeltec_rviz2/: CMakeLists.txt  package.xml
src/wheeltec_rviz2/launch/: wheeltec_rtabmapviz.launch.py  wheeltec_rviz.launch.py
(+18 files in other folders)
