<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeltec_robot_urdf</name>
  <version>2.1.0</version>
  <description>
    3D models of the wheeltec_robot for simulation and visualization
  </description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
